# BattleshipConsole

./: CMakeLists.txt  LICENSE  README.md
src/: game.c  game.h  types.h
